# requests

./: .gitattributes  .gitignore  .rcli_session  Dockerfile.eval.dev  README_REQCHECK.md  SOLUTION_SUMMARY.md  bench.py  check_imports.py  config.json  config.toml  debug_test.py  rcli.py  request_timing_demo.csv  requirements_reqcheck.txt  results.csv  run_cli_tests.py  setup.cfg  setup.py  setup_reqcheck.py  test_add_metrics.py  test_add_metrics2.py  test_copilot_setup.py  test_h2.py  test_http2_adapter.py  test_httpx_http2.py  test_mount.py  test_reqcheck.py  test_session_mount.py  test_urls.txt  urls.txt
.github/: COPILOT_EXAMPLE.md  COPILOT_SETUP.md
data/: httpbin.org_delay_1.html  httpbin.org_get.html  httpbin.org_headers.html  httpbin.org_ip.html  httpbin.org_user-agent.html  index.json
docs/: http2_adapter.md  requests_architecture.md  timing.md  二次开发指南.md
examples/: config.ini  config.json  cookies.json  headers.json  http2_multi_request.py  metrics_example.py  run_example.sh  timing_demo.py  urls.txt
webcache_explorer/: README.md  bench.py  config.py  docs.md  examples.md  main.py  pyproject.toml  quickstart.md  requirements-dev.txt  requirements.txt  urls.txt  utils.py
webcache_explorer/commands/: __init__.py  add_url.py  export.py  fetch.py  refetch.py  search.py  show.py  stats.py
webcache_explorer/config/: config.toml
webcache_explorer/src/webcache_explorer/: __init__.py  cache.py  cli.py  config.py  crawler.py  text_processor.py
webcache_explorer/tests/: test_cache.py  test_cli.py  test_config.py  test_crawler.py  test_text_processor.py
(+68 files in other folders)
